@@ -118,6 +118,7 @@ export("+.section",
        "nitrate<-",
        nitrite,
        "nitrite<-",
+       numberAsHMS,
        numberAsPOSIXct,
        oceApprox,
        oce.as.raw,
